--- a/tests/data/janitoo_hostsensor.conf
+++ b/tests/data/janitoo_hostsensor.conf
@@ -69,7 +69,7 @@ formatter = generic
 args = ('/tmp/janitoo_test/log/jnt_hostsensor.log', 'w')
 
 [formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
+format = %(asctime)s - %(levelname)-8.8s - [%(name)s] %(message)s
 datefmt = %H:%M:%S
 
 [hostsensor__lmsensor]
